# mcp-time-server

./: LICENSE  README.md  build.py  claude_desktop_config.example.json  claude_desktop_config_executable.json  mcp-time-server.spec  pyproject.toml  requirements.txt  server.py  test_tools.py
.github/workflows/: build-executables.yml
