[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-time-server"
version = "0.1.0"
description = "MCP server providing simple time and date utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "tzdata; sys_platform == 'win32'",  # Windows needs tzdata package
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
mcp-time-server = "server:main"

[tool.setuptools]
py-modules = ["server"]
